--- a/ckanext/kdl_madih/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/kdl_madih/templates/package/snippets/package_metadata_fields.html
@@ -1,32 +1,54 @@
-
 {% ckan_extends %}
 
-  {% block custom_fields %}
-  {% endblock %}
+{% block custom_fields %}
+{% endblock %}
 
 {% block package_metadata_fields %}
-	<div class="control-group">
-	    <label class="control-label" for="field-madih_kdl_time_periods">{{ _("Time Period") }}</label>
-	    <div class="controls">
-	      <select multiple  id="field-madih_kdl_time_periods" name="madih_kdl_time_periods" data-module="autocomplete">
-	        {% for madih_kdl_time_period in h.madih_kdl_time_periods()  %}
-	          <option value="{{ madih_kdl_time_period }}" {% if madih_kdl_time_period in data.get('madih_kdl_time_periods', []) %}selected="selected"{% endif %}>{{ madih_kdl_time_period}}</option>
-	        {% endfor %}
-	      </select>
-	    </div>
-	  </div>
-
-	  <div class="control-group">
-    <label class="control-label" for="field-madih_kdl_project_status">{{ _('Project status') }}</label>
-    <div class="controls">
-      <select id="field-madih_kdl_project_status" name="madih_kdl_project_status" data-module="autocomplete">
-        {% for madih_kdl_project_status in h.madih_kdl_project_status()  %}
-        <option value="{{ madih_kdl_project_status }}" {% if madih_kdl_project_status in data.get('madih_kdl_project_status', []) %}selected="selected"{% endif %}>
-            {{ madih_kdl_project_status }}
-        </option>
-        {% endfor %}
+<div class="control-group">
+  <label class="control-label"
+    for="field-madih_kdl_time_periods">{{ _("Time Period") }}</label>
+  <div class="controls">
+    <select multiple id="field-madih_kdl_time_periods"
+      name="madih_kdl_time_periods" data-module="autocomplete">
+      {% for madih_kdl_time_period in h.madih_kdl_time_periods()  %}
+      <option value="{{ madih_kdl_time_period }}"
+        {% if madih_kdl_time_period in data.get('madih_kdl_time_periods', []) %}selected="selected"
+        {% endif %}>{{ madih_kdl_time_period}}</option>
+      {% endfor %}
     </select>
+  </div>
 </div>
+
+<div class="control-group">
+  <label class="control-label"
+    for="field-madih_kdl_project_status">{{ _('Project status') }}</label>
+  <div class="controls">
+    <select id="field-madih_kdl_project_status" name="madih_kdl_project_status"
+      data-module="autocomplete">
+      {% for madih_kdl_project_status in h.madih_kdl_project_status()  %}
+      <option value="{{ madih_kdl_project_status }}"
+        {% if madih_kdl_project_status in data.get('madih_kdl_project_status', []) %}selected="selected"
+        {% endif %}>
+        {{ madih_kdl_project_status }}
+      </option>
+      {% endfor %}
+    </select>
+  </div>
 </div>
-    {{ super() }}
+
+<div class="control-group">
+  <label class="control-label"
+    for="field-madih_kdl_datatype">{{ _("Datatype") }}</label>
+  <div class="controls">
+    <select multiple id="field-madih_kdl_datatype" name="madih_kdl_datatype"
+      data-module="autocomplete">
+      {% for dt in h.madih_kdl_datatype()  %}
+      <option value="{{ dt }}"
+        {% if dt in data.get('madih_kdl_datatype', []) %}selected="selected"
+        {% endif %}>{{ madih_kdl_datatype}}</option>
+      {% endfor %}
+    </select>
+  </div>
+</div>
+{{ super() }}
 {% endblock %}
