--- a/ckanext/kdl_madih/templates/home/snippets/promoted.html
+++ b/ckanext/kdl_madih/templates/home/snippets/promoted.html
@@ -1,8 +1,5 @@
 {% ckan_extends %}
 
-{% block home_image_caption %}
-{% endblock %}
-
 {# Remove the promoted image section. #}
-{% block home_image_content %}
+{% block home_image %}
 {% endblock %}
