🐛 Fix: Template syntax error.

--- a/ckanext/kdl_madih/templates/package/snippets/additional_info.html
+++ b/ckanext/kdl_madih/templates/package/snippets/additional_info.html
@@ -82,6 +82,6 @@
   <td class="dataset-details">{{ pkg_dict.madih_kdl_datatype|join(", ")}}
   </td>
 </tr>
-{% endif %
+{% endif %}
 
 {% endblock %}
