--- a/ckanext/kdl_madih/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/kdl_madih/templates/package/snippets/package_metadata_fields.html
@@ -6,7 +6,7 @@
 {% block package_metadata_fields %}
 <div class="control-group">
   <label class="control-label"
-    for="field-madih_kdl_time_periods">{{ _("Time Period") }}</label>
+    for="field-madih_kdl_time_periods">{{ _("Time Periods") }}</label>
   <div class="controls">
     <select multiple id="field-madih_kdl_time_periods"
       name="madih_kdl_time_periods" data-module="autocomplete">
